--- a/acceuil.html
+++ b/acceuil.html
@@ -39,7 +39,7 @@
                       <div class="col-xs-12">
                         <div class="card"> 
                           <div class="card-block">
-                           <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                           <div>
                             <div class="item active">
                               <img src="./assets/images/img-05.jpg" class="img-responsive" alt="...">
                             </div>
