--- a/acceuil.html
+++ b/acceuil.html
@@ -7,7 +7,7 @@
             <meta charset="UTF-8">
             <meta content="IE=edge" http-equiv="X-UA-Compatible">
             <meta content="width=device-width,initial-scale=1" name="viewport">
-            <meta content="description" content="c est une boutique en ligne de Gameboys d accessoire et de jeux">
+            <meta content="c est une boutique en ligne de Gameboys d accessoire et de jeux" name="description">
             <meta name="google" content="notranslate" />
             <meta content="Mashup templates have been developped by Orson.io team" name="author">
             <meta name="msapplication-tap-highlight" content="no">
