--- a/acceuil.html
+++ b/acceuil.html
@@ -7,9 +7,8 @@
             <meta charset="UTF-8">
             <meta content="IE=edge" http-equiv="X-UA-Compatible">
             <meta content="width=device-width,initial-scale=1" name="viewport">
-            <meta content="c est une boutique en ligne de Gameboys d accessoire et de jeux" name="description">
+            <meta name="description" content="c est une boutique en ligne de Gameboys d accessoire et de jeux">
             <meta name="google" content="notranslate" />
-            <meta content="Mashup templates have been developped by Orson.io team" name="author">
             <meta name="msapplication-tap-highlight" content="no">
             <link rel="icon" href="./assets/apple-icon-180x180.png" type="image/icon type">
             <title>KANJI</title>  
