--- a/jeuxgameboy.html
+++ b/jeuxgameboy.html
@@ -55,38 +55,123 @@
                           <div class="row">
 
                             <div class="col-md-4">
-                              <a href="https://www.google.com/">
+                              <a href="€J The Legend of Zeld Oracle Of Seasons.html">
                                 <img src="./assets/images/blank.jpg" class="img-responsive" alt="">
                                 <center>
-                                  <h5>Pokemon Rouge</h5>
+                                  <h5>The Legend of Zeld Oracle Of Seasons</h5>
                                 </center>
                               </a>
                               <center>
-                                <h4>5,00 €</h4>
+                                <h4>6,90 €</h4>
                               </center>
                             </div>
 
                             <div class="col-md-4">
-                              <a href="https://www.google.com/">
+                              <a href="€J Zeld DX - Links Awakening.html">
                                 <img src="./assets/images/blank.jpg" class="img-responsive" alt="">
                                 <center>
-                                  <h5>Super Mario Land</h5>
+                                  <h5>Zeld DX - Links Awakening</h5>
                                 </center>
                               </a>
                               <center>
-                                <h4>5,00 €</h4>
+                                <h4>6,90 €</h4>
                               </center>
                             </div>
 
                             <div class="col-md-4">
-                              <a href="https://google.com">
+                              <a href="€J The Legend of Zelda - Oracle of Ages.html">
                                 <img src="./assets/images/blank.jpg" class="img-responsive" alt="">
                                 <center>
-                                  <h5>Tetris</h5>
+                                  <h5>The Legend of Zelda - Oracle of Ages</h5>
                                 </center>
                               </a>
                               <center>
-                                <h4>5,00 €</h4>
+                                <h4>6,90 €</h4>
+                              </center>
+                            </div>
+
+
+                            <div class="col-md-4">
+                              <a href="/€J Pokemon Blue.html">
+                                <img src="./assets/images/blank.jpg" class="img-responsive" alt="">
+                                <center>
+                                  <h5>Pokemon Blue</h5>
+                                </center>
+                              </a>
+                              <center>
+                                <h4>6,90 €</h4>
+                              </center>
+                            </div>
+
+                            <div class="col-md-4">
+                              <a href="€J Pokemon Red.html">
+                                <img src="./assets/images/blank.jpg" class="img-responsive" alt="">
+                                <center>
+                                  <h5>Pokemon Red</h5>
+                                </center>
+                              </a>
+                              <center>
+                                <h4>6,90 €</h4>
+                              </center>
+                            </div>
+
+                            <div class="col-md-4">
+                              <a href="€J Pokemon Green.html">
+                                <img src="./assets/images/blank.jpg" class="img-responsive" alt="">
+                                <center>
+                                  <h5>Pokemon Green</h5>
+                                </center>
+                              </a>
+                              <center>
+                                <h4>6,90 €</h4>
+                              </center>
+                            </div>
+
+                            <div class="col-md-4">
+                              <a href="€J Pokemon Crystal.html">
+                                <img src="./assets/images/blank.jpg" class="img-responsive" alt="">
+                                <center>
+                                  <h5>Pokemon Crystal</h5>
+                                </center>
+                              </a>
+                              <center>
+                                <h4>6,90 €</h4>
+                              </center>
+                            </div>
+
+                            <div class="col-md-4">
+                              <a href="€J Pokemon Gold.html">
+                                <img src="./assets/images/blank.jpg" class="img-responsive" alt="">
+                                <center>
+                                  <h5>Pokemon Gold</h5>
+                                </center>
+                              </a>
+                              <center>
+                                <h4>6,90 €</h4>
+                              </center>
+                            </div>
+
+                            <div class="col-md-4">
+                              <a href="€J Pokemon Silver.html">
+                                <img src="./assets/images/blank.jpg" class="img-responsive" alt="">
+                                <center>
+                                  <h5>Pokemon Silver</h5>
+                                </center>
+                              </a>
+                              <center>
+                                <h4>6,90 €</h4>
+                              </center>
+                            </div>
+
+                            <div class="col-md-4">
+                              <a href="/€J Metal Gear Solid.html">
+                                <img src="./assets/images/blank.jpg" class="img-responsive" alt="">
+                                <center>
+                                  <h5>Metal Gear Solid</h5>
+                                </center>
+                              </a>
+                              <center>
+                                <h4>6,90 €</h4>
                               </center>
                             </div>
 
